--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {},
   "devDependencies": {
     "cypress": "^5.6.0",
+    "cypress-file-upload": "^4.1.1",
     "husky": "^4.3.0"
   },
   "husky": {
