--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "cypress": "^5.6.0",
     "cypress-file-upload": "^4.1.1",
-    "husky": "^4.3.0"
+    "husky": "^4.3.0",
+    "lighthouse": "^6.4.1"
   },
   "husky": {
     "hooks": {
