--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cypress open",
     "test-cli": "yarn test-background",
     "test-background": "cypress run",
-    "test-site": "bash setup-test-site.sh # update test site"
+    "test-site": "bash setup-test-site.sh # update test site",
+    "test-quality": "bash website-quality-test.sh"
   },
   "repository": {
     "type": "git",
