--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cypress": "^5.6.0",
     "cypress-file-upload": "^4.1.1",
     "husky": "^4.3.0",
-    "lighthouse": "^6.4.1"
+    "lighthouse": "^6.4.1",
+    "surge": "^0.21.7"
   },
   "husky": {
     "hooks": {
