--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Edit. Present. Try it: https://hchiam-slides.surge.sh",
   "main": "slides.js",
   "scripts": {
-    "test": "cypress open",
+    "test": "npx cypress open",
     "test-cli": "yarn test-background",
-    "test-background": "cypress run",
+    "test-background": "npx cypress run",
     "test-site": "bash setup-test-site.sh # update test site",
     "test-quality": "bash website-quality-test.sh"
   },
