--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
   yarn: true
   directories:
     - node_modules
-    - ~/.cache # get Cypress working
+    - /home/travis/.cache/Cypress # get Cypress working
 
 before_script:
   - yarn
