--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,30 @@ cache:
   yarn: true
   directories:
     - node_modules
-    - /home/travis/.cache/Cypress # get Cypress working
+    - ~/.cache # get Cypress working
 
 before_script:
   - yarn
+  - cypress install
 
 script:
   - yarn test-site && yarn test-cli
+# language: node_js
+# node_js:
+#   - 10
+# addons:
+#   apt:
+#     packages:
+#       # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+#       - libgconf-2-4
+# cache:
+#   # Caches $HOME/.npm when npm ci is default script command
+#   # Caches node_modules in all other cases
+#   npm: true
+#   directories:
+#     # we also need to cache folder with Cypress binary
+#     - ~/.cache
+# install:
+#   - npm ci
+# script:
+#   - yarn test-site && yarn test-cli
