--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ language: javascript
 
 node_js: v10
 
-addons:
-  apt:
-    packages:
-      - libgconf-2-4 # get Cypress working
+# addons:
+#   apt:
+#     packages:
+#       - libgconf-2-4 # to get Cypress working
 
 cache:
   yarn: true
@@ -16,6 +16,13 @@ cache:
 
 before_script:
   - yarn
+  - cypress install # to get Cypress working
 
 script:
   - yarn test-site && yarn test-cli
+# notifications:
+#   email:
+#     # If you don't want to specify emails here,
+#     # you can set your email with git config --global user.email
+#     on_success: always
+#     on_failure: always
