--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-background": "npx cypress run",
     "test-site-prep": "bash bash-scripts/setup-test-site.sh # update test site",
     "test-quality": "bash bash-scripts/website-quality-test.sh",
+    "minify": "bash bash-scripts/minify.sh",
     "publish": "bash bash-scripts/publish.sh # yarn run publish"
   },
   "repository": {
