convenient alias script: yarn deploy [skip ci]

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test-site-prep": "bash bash-scripts/setup-test-site.sh # update test site",
     "test-quality": "bash bash-scripts/website-quality-test.sh",
     "minify": "bash bash-scripts/minify.sh",
-    "publish": "bash bash-scripts/publish.sh # yarn run publish"
+    "publish": "bash bash-scripts/publish.sh # yarn run publish",
+    "deploy": "yarn run publish"
   },
   "repository": {
     "type": "git",
