restore husky pre-commit hook [skip ci]

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "#yarn test-pre-commit"
+      "pre-commit": "yarn test-pre-commit"
     }
   },
   "dependencies": {
