setup local testing without costin reads/writes/deletes to the real DB: for #114 [skip ci]

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "minify": "bash bash-scripts/minify.sh",
     "browser-sync": "bash bash-scripts/browser-sync.sh",
     "publish": "bash bash-scripts/publish.sh # yarn run publish",
-    "deploy": "yarn run publish"
+    "deploy": "yarn run publish",
+    "fb:export": "cd firestore && firebase emulators:export seed",
+    "fb:start": "cd firestore && echo 'open http://localhost:4000/firestore/slides' && firebase emulators:start --import seed"
   },
   "repository": {
     "type": "git",
@@ -34,15 +36,16 @@
   "devDependencies": {
     "cypress": "^6.5.0",
     "cypress-file-upload": "^5.0.0",
+    "firebase-tools": "^9.10.0",
     "husky": "^4.3.8",
     "lighthouse": "^7.0.0",
     "minify": "^6.0.1",
-    "parcel": "^1.12.4",
+    "parcel-bundler": "1.12.3",
     "surge": "^0.21.7"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test-pre-commit"
+      "pre-commit": "#yarn test-pre-commit"
     }
   },
   "dependencies": {
