--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "publish": "bash bash-scripts/publish.sh # yarn run publish",
     "deploy": "yarn run publish",
     "fb:export": "cd firestore && firebase emulators:export seed",
-    "fb:start": "cd firestore && echo 'open http://localhost:4000/firestore/slides' && firebase emulators:start --import seed"
+    "fb:start": "cd firestore && echo 'open http://localhost:4000/firestore/slides' && firebase emulators:start --import seed",
+    "es-check": "es-check es5 'minified.js' 'slides.js' './other-js/*.js'"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "cypress": "^6.5.0",
     "cypress-file-upload": "^5.0.0",
     "cypress-plugin-tab": "^1.0.5",
+    "es-check": "^6.0.0",
     "firebase-tools": "^9.10.0",
     "husky": "^4.3.8",
     "lighthouse": "^7.0.0",
@@ -53,6 +55,7 @@
     }
   },
   "lint-staged": {
+    "**/*.js": "es-check es5 'minified.js' 'slides.js' './other-js/*.js'",
     "*.{js,css,html,scss,json,md,ts,tsx}": "prettier --write"
   }
 }
